# rugix-bakery

./: .cspell.json  .gitignore  .gitmodules  Cargo.toml  README.md  devenv.nix  devenv.yaml
.github/workflows/: build.yml  check-and-lint.yml
bakery/: Dockerfile  run-bakery
bakery/templates/rpi-alpine/: rugix-bakery.toml
bakery/templates/rpi-raspios/: rugix-bakery.toml
bakery/templates/rpi-raspios/layers/: customized.toml
container/: Dockerfile
container/repositories/core/layers/: raspios-trixie.arm64.toml
container/templates/alpine-grub-efi/: rugix-bakery.toml
container/templates/quickstart-guide/: rugix-bakery.toml
container/templates/yocto-grub-efi/: rugix-bakery.toml
crates/apps/rugix-bakery/: Cargo.toml
crates/apps/rugix-bakery/assets/: run-bakery
crates/apps/rugix-bakery/src/: main.rs  paths.rs
crates/apps/rugix-bakery/src/cli/: mod.rs
crates/apps/rugix-bakery/src/cli/cmds/: run_bundler.rs  run_cache.rs  run_init.rs  run_shell.rs
crates/apps/rugix-bakery/src/oven/: customize.rs  mod.rs  system.rs
crates/apps/rugix-bakery/src/oven/targets/: generic_grub_efi.rs  rpi_tryboot.rs  rpi_uboot.rs
crates/apps/rugix-bakery/src/project/: repositories.rs
crates/apps/rugix-bakery/src/tester/: qemu.rs
crates/apps/rugix-isolate/: Cargo.toml
crates/apps/rugix-isolate/src/: main.rs
crates/libs/rugix-isolator/: Cargo.toml
crates/libs/rugix-isolator/src/: lib.rs
xtask/src/: main.rs
