[package]
name = "rugix-isolate"
description = "Spawn a process in isolated user and mount namespaces."
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
libc.workspace = true
rugix-isolator = { path = "../../libs/rugix-isolator" }

[lints]
workspace = true
