[package]
name = "rugix-isolator"
description = "Process isolation using Linux namespaces."
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nix = { workspace = true, features = ["sched", "mount", "fs", "user"] }

[lints]
workspace = true
